# nixos-secure-factory

./: .gitignore  CODEOWNERS  README.md  TODO.md  enter-factory-common-install-scripts-build-env.sh  enter-factory-common-install-scripts-env.sh  enter-factory-install-scripts-build-env.sh  enter-factory-install-scripts-env.sh  enter_factory_install_scripts_env.sh  env.sh  release.nix  shell.nix
.nix/: default.nix  overlay-internal.nix  overlay.nix
demo-nixos-config/: default.nix  release.nix
demo-nixos-config/.nix/: default.nix  release.nix
demo-nixos-config/device-update/: release.nix  update-defaults.yaml
demo-nixos-config/lib/: pinned-src-helpers.nix  sf-lib.nix  sf.nix  src-ignore.nix  src.nix  ssh-auth.nix
device-update/: default.nix  release.nix
doc/: Commands.md  Concepts.md  ConfiguringADevice.md  InitialSetup.md  InitializingNewDeviceConfiguration.md  IntializingFactoryInfo.md
doc/Command/: device-os-secrets-create.md  device-os-secrets-vault-authorize.md  device-os-secrets-vault-deauthorize.md  device-os-secrets-vault-list-authorized.md  device-os-secrets-vaults-factory-only-authorize.md  device-os-secrets-vaults-factory-only-deauthorize.md  factory-gpg.md  (+5 more)
lib/: bash-completions.nix  data-deploy-helpers.nix  default.nix  env.nix  pinned-src-helpers.nix  src-helpers.nix
scripts/: .local-env.sh
scripts/factory-common-install/py/: Makefile  default.nix  mypy.ini  release.nix  setup.cfg  shell.nix
scripts/factory-common-install/py/src/bash_utils/: __init__.py
scripts/factory-common-install/py/src/nsf_factory_common_install/: _state_persistance_tools.py  cli_device_state.py  cli_ssh_auth_dir.py  file_current_device_state.py  file_device_info.py  file_device_state.py  file_factory_state.py  prompt.py  repo_device_cfg.py  repo_project.py  repo_ssh_auth.py  repo_workspace.py  sh_process.py  ssh_auth_dir.py  store_device.py  store_device_current.py  store_devices.py  store_factory_info.py  store_ssh_auth.py  types_device.py  types_device_state.py  types_factory.py  types_factory_state.py  workspace_paths.py
scripts/factory-common-install/py/src/nsf_factory_common_install/cli/: __init__.py  _auto_complete.py  _ctx.py  _ctx_device_list.py  _device_set.py  _device_state_ctx.py  _factory_info.py  click.py  device_common_ssh_auth_dir.py  device_ssh_auth_dir.py  device_state.py  device_state_checkout.py  device_state_field.py  options.py
scripts/factory-common-install/py/src/nsf_factory_common_install/cli/device_common_ssh_auth_dir/: __init__.py  cli.py
scripts/factory-common-install/py/src/nsf_factory_common_install/cli/device_current_state/: __init__.py  cli.py
scripts/factory-common-install/py/src/nsf_factory_common_install/cli/device_ssh_auth_dir/: cli.py
scripts/factory-common-install/py/src/nsf_factory_common_install/cli/device_state/: __init__.py  _ctx.py  _field_ac.py  _fields_schema.py  checkout.py  cli.py  create.py  field.py  file.py
scripts/factory-common-install/py/src/nsf_factory_common_install/click/: __init__.py  ctx_dict.py  error.py  sh_comp.py
scripts/factory-common-install/py/test_lib/: click.py
scripts/factory-common-install/py/test_lib/data/: __init__.py
scripts/factory-common-install/py/tests/: test_misc.py
scripts/factory-common-install/py/tests/cli/: test_device_common_ssh_auth_dir.py  test_device_current_state.py  test_device_ssh_auth_dir.py  test_device_state.py
scripts/factory-install/py/: Makefile  default.nix  release.nix  setup.cfg
scripts/factory-install/py/src/nsf_factory_install/: __init__.py  cli_ssh_auth_dir.py  store_ssh_auth.py
scripts/factory-install/py/tests/: test_misc.py
(+599 files in other folders)
