[metadata]
name = nixos-sf-factory-common-install-py
description = Python lib in support of nixos-sf-factory-common-install.
long-description = file: README.md
author = Raymond Gauthier
author_email = jraygauthier@gmail.com
license = 'Apache License 2.0'

platform = any

[options]
package_dir=
     =src
packages = find:

zip_safe = false
include_package_data = true
python_requires = >= 3.7
setup_requires =
    setuptools

install_requires =
    click
    pyyaml

[options.packages.find]
where = src

# [options.entry_points]
# console_scripts =
    # nixos-sf-ssh-auth-dir = nixos_sf_ssh_auth_dir.cli:cli


[flake8]
max-line-length = 88
max-complexity = 10
ignore =
    # [Line break occurred after a binary operator (W504)
    # ](https://lintlyci.github.io/Flake8Rules/rules/W504.html)
    W503,
    # For the moment, we do not want missing doc
    # strings to be reported. Re-evaluate this
    # at some point.
    D100,
    D101,
    D102,
    D103,
    D107,


# This is `autopep8`'s config.
[pycodestyle]
# aggressive = 1
aggressive = 2
#experimental = 1
max-line-length = 88
verbose = 1
ignore =
    # [Line break occurred after a binary operator (W504)
    # ](https://lintlyci.github.io/Flake8Rules/rules/W504.html)
    W503


[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88


[pydocstyle]
inherit = false
max_doc_length = 72
ignore =
    D100,
    D101,
    D102,
    D107
