[metadata]
name = nsf-factory-common-install-py
description = Python lib in support of nsf-factory-common-install.
long-description = file: README.md
author = Raymond Gauthier
author_email = jraygauthier@gmail.com
license = 'Apache License 2.0'

platform = any

[options]
package_dir=
     =src
packages = find:

zip_safe = false
include_package_data = true
python_requires = >= 3.7
setup_requires =
    setuptools

install_requires =
    click
    pyyaml

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    device-common-ssh-auth-dir = nsf_factory_common_install.cli:run_cli_device_common_ssh_auth
    device-ssh-auth-dir = nsf_factory_common_install.cli:run_cli_device_ssh_auth
    device-state = nsf_factory_common_install.cli:run_cli_device_state

[flake8]
max-line-length = 88
max-complexity = 10
ignore =
    W503,
    # Do not report missing doc strings.
    D100, D101, D102, D103, D107,

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[pycodestyle]
aggressive = 2
max-line-length = 88
verbose = 1
ignore =
    W503