[metadata]
name = nixos-sf-factory-install-py
description = Python lib in support of nixos-sf-factory-common-install.
long-description = file: README.md
author = Raymond Gauthier
author_email = jraygauthier@gmail.com
license = 'Apache License 2.0'

platform = any

[options]
package_dir=
     =src
packages = find:

zip_safe = false
include_package_data = true
python_requires = >= 3.7
setup_requires =
    setuptools

install_requires =
    click
    pyyaml
    nixos-sf-ssh-auth-cli
    nixos-sf-factory-common-install-py

[options.packages.find]
where = src

# [options.entry_points]
# console_scripts =
    # nixos-sf-ssh-auth-dir = nixos_sf_ssh_auth_dir.cli:cli


[flake8]
max-line-length = 88
max-complexity = 10
ignore =
    W503,
    # Do not report missing doc strings.
    D100, D101, D102, D103, D107,
